fix(mediawiki): 🐛 image clipping in packed gallery
Fix: #822

--- a/skinStyles/mediawiki/mediawiki.page.gallery.styles.less
+++ b/skinStyles/mediawiki/mediawiki.page.gallery.styles.less
@@ -19,7 +19,7 @@ div.gallerytext {
 	letter-spacing: 0.025em;
 
 	p {
-		margin: var( --space-xs ) 0; // reset default style
+		margin: var( --space-xxs ) 0; // reset default style
 	}
 }
 
@@ -61,8 +61,7 @@ ul.gallery.mw-gallery-slideshow {
 
 @media screen {
 	li.gallerybox div.thumb {
-		max-width: ~'calc( 100% - var( --space-xs ) )';
-		margin: var( --space-xs );
+		margin: var( --space-xxs );
 		overflow: hidden; // quick hack for rounded corner
 		background-color: var( --color-surface-2 );
 		border-color: transparent;
